// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="uppercase tracking-wider box-border border border-gray-400 text-black focus:outline-none focus:border-gray-800 hover:border-gray-800 rounded-lg text-lg px-4 py-3"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="uppercase tracking-wider box-border bg-blue-600 border border-blue-600 text-white focus:outline-none focus:bg-blue-800 focus:border-blue-800 hover:bg-blue-800 hover:border-blue-800 rounded-md text-md px-3 py-2"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="uppercase tracking-wider box-border border border-gray-400 text-black focus:outline-none focus:border-gray-800 hover:border-gray-800 rounded-md text-md px-3 py-2"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="uppercase tracking-wider box-border border border-gray-400 text-black focus:outline-none focus:border-gray-800 hover:border-gray-800 rounded-sm text-sm px-2 py-1"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;
